<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bluerov2_pipe_track</name>
  <version>0.0.1</version>
  <description>Example of custom control law built on auv_control</description>
  <maintainer email="alestozzi1@gmail.com">Alessandro Tozzo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>urdfdom</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>thruster_manager</depend>
  <depend>auv_control</depend>
  <depend>cv_bridge</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
